kustomize/overlays/test/delete-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-workspaces
  namespace: kube-workspaces-system
