kustomize/overlays/test/patch-proxy-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-workspaces-proxy
  namespace: kube-workspaces-system
spec:
  template:
    spec:
      containers:
        - name: proxy
          env:
            - name: ALLOWED_ORIGINS
              value: "http://localhost:3000,http://localhost:8891"
